--- a/custom_object_detection/pubspec.yaml
+++ b/custom_object_detection/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   tflite: ^1.1.1
   camera: ^0.10.0+3
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
