--- a/custom_object_detection/pubspec.yaml
+++ b/custom_object_detection/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   tflite: ^1.1.1
   camera: ^0.10.0+3
   shared_preferences:
+  flutter_gradients:
+  iconsax:
 
 dev_dependencies:
   flutter_test:
