--- a/custom_object_detection/pubspec.yaml
+++ b/custom_object_detection/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_gradients:
   iconsax:
   table_calendar:
+  step_progress_indicator:
 
 dev_dependencies:
   flutter_test:
