--- a/custom_object_detection/pubspec.yaml
+++ b/custom_object_detection/pubspec.yaml
@@ -38,10 +38,17 @@ dependencies:
   circle_progress_bar:
   fl_chart:
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.7.5
+  change_app_package_name: ^0.1.3
+
+flutter_icons:
+  android: true
+  image_path: "assets/App Icon.png"
+  ios: true
+  remove_alpha_ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
